# haze

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DOCS_QUICK_REFERENCE.md  DOCUMENTATION_SETUP_SUMMARY.md  GITHUB_ABOUT.txt  GITHUB_RELEASE_GUIDE.md  IMPLEMENTED_INDICATORS.md  INDICATOR_PLAN.md  LICENSE  MANIFEST.in  NUMERICAL_STABILITY_IMPLEMENTATION_SUMMARY.md  NUMERICAL_STABILITY_QUICKSTART.md  PYPI_UPLOAD_GUIDE.md  README.md  TYPE_STUBS_REPORT.md  TYPE_STUBS_USAGE.md  claude.md  crates.js  doc-coverage-report.md  generate_enhanced_pyi.py  generate_pyi.py  grok.md  help.html  index.html  pyproject.toml  settings.html  sprint.md  src-files.js  verify_type_stubs.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  precision_tests.yml  test-release.yml
dev/bench/: data.js
docs/: API_REFERENCE.md  ERROR_HANDLING_MIGRATION.md  ERROR_HANDLING_STRATEGY.md  ERROR_HANDLING_SUMMARY.md  LT_INDICATORS.md  NUMERICAL_PRECISION.md  changelog.rst  conf.py  contributing.rst  frameworks.rst  index.rst  installation.rst  quickstart.rst
docs/api/: accessor.rst  exceptions.rst  indicators.rst
docs/diagrams/: architecture.mmd  dataflow.mmd  indicators_taxonomy.mmd  module_dependencies.mmd
examples/: REGIME_CALIBRATION_RESULTS.md  btc_data_collector.py  ccxt_realtime_demo.py  lt_indicator_demo.py  optimization_summary.md  regime_aware_demo.py  sfg_indicator_analysis.md  test_lt_indicators.py  test_regime_aware.py  test_regime_calibration.py  test_regime_calibration_btc.py  test_trend_signals.py  test_weight_optimization.py  trading_system_integration.py  type_hints_demo.py
haze_library/: all.html  fn.__pyfunction_py_abandoned_baby.html  fn.__pyfunction_py_aberration.html  fn.__pyfunction_py_abs.html  fn.__pyfunction_py_acos.html  fn.__pyfunction_py_ad.html  fn.__pyfunction_py_add.html  fn.__pyfunction_py_adosc.html  fn.__pyfunction_py_advance_block.html  fn.__pyfunction_py_adx.html  fn.__pyfunction_py_ai_momentum_index.html  fn.__pyfunction_py_ai_momentum_index_ml.html  fn.__pyfunction_py_ai_supertrend.html  fn.__pyfunction_py_ai_supertrend_ml.html  fn.__pyfunction_py_alligator.html  fn.__pyfunction_py_alma.html  fn.__pyfunction_py_apo.html  fn.__pyfunction_py_aroon.html  fn.__pyfunction_py_asin.html  fn.__pyfunction_py_atan.html  fn.__pyfunction_py_atr.html  fn.__pyfunction_py_atr2_signals.html  fn.__pyfunction_py_atr2_signals_ml.html  fn.__pyfunction_py_avgprice.html  fn.__pyfunction_py_awesome_oscillator.html  fn.__pyfunction_py_bearish_engulfing.html  fn.__pyfunction_py_bearish_harami.html  fn.__pyfunction_py_belthold.html  fn.__pyfunction_py_beta.html  fn.__pyfunction_py_bias.html  fn.__pyfunction_py_bollinger_bands.html  fn.__pyfunction_py_bop.html  fn.__pyfunction_py_breakaway.html  fn.__pyfunction_py_breaker_block_signals.html  fn.__pyfunction_py_bullish_engulfing.html  fn.__pyfunction_py_bullish_harami.html  fn.__pyfunction_py_calc_pivot_series.html  fn.__pyfunction_py_calculate_stops.html  fn.__pyfunction_py_camarilla_pivots.html  fn.__pyfunction_py_cci.html  (+527 more)
haze_library/dataframe/: fn.create_ohlcv_frame.html  index.html  sidebar-items.js  struct.OhlcvFrame.html
haze_library/errors/: enum.HazeError.html  index.html  sidebar-items.js  type.HazeResult.html
haze_library/indicators/: index.html  sidebar-items.js
haze_library/macros/: index.html
haze_library/ml/: index.html  sidebar-items.js
haze_library/streaming_py/: fn.register_streaming_classes.html  index.html  sidebar-items.js  struct.PyAISuperTrendMLResult.html  struct.PyEnsembleResult.html  struct.PyMLSuperTrendResult.html  struct.PyOnlineAISuperTrendML.html  struct.PyOnlineATR.html  struct.PyOnlineAdaptiveRSI.html  struct.PyOnlineBollingerBands.html  struct.PyOnlineEMA.html  struct.PyOnlineEnsembleSignal.html  struct.PyOnlineMACD.html  struct.PyOnlineMLSuperTrend.html  struct.PyOnlineRSI.html  (+3 more)
rust/: COMPREHENSIVE_AUDIT_REPORT.md  Cargo.toml  PHASE_3_4_COMPLETION_SUMMARY.md  check_8_funcs.py  pyproject.toml
rust/benches/: hotspots.rs
rust/docs/: module_docs_momentum.md  module_docs_parallel.md
rust/python/haze_library/: __init__.py
rust/src/: coverage_tests.rs  dataframe.rs  errors.rs  lib.rs  macros.rs  polars_compat.rs  types.rs
rust/src/backups/: lib.rs.backup_20251230_145229  lib.rs.backup_20251230_145537  lib.rs.backup_20251230_145802  lib.rs.backup_20251230_151249  lib.rs.backup_20251230_155144
rust/src/ffi/: mod.rs  zero_copy.rs
rust/src/indicators/: candlestick.rs  cycle.rs  fibonacci.rs  harmonics.rs  heikin_ashi.rs  ichimoku.rs  mod.rs  momentum.rs  overlap.rs  pandas_ta.rs  pandas_ta_compat.rs  pivots.rs  price_transform.rs  sfg.rs  sfg_signals.rs  sfg_utils.rs  trend.rs  volatility.rs  volume.rs
rust/src/ml/: features.rs  manager.rs  mod.rs  models.rs  trainer.rs
rust/src/utils/: float_compare.rs  ma.rs  math_ops.rs  mod.rs  parallel.rs  simd_ops.rs  stats.rs  streaming.rs
rust/tests/: test_parallel_correctness.rs  test_workflows.rs
rust/tests/unit/: test_python_ffi_core_indicators.py  test_python_ffi_edge_cases.py
scripts/: README.md  auto_integrate_zero_copy.py  check_docs.sh  check_pandas_ta_compat.py  generate_docs.sh  migrate_to_zero_copy.py  quality_gate.sh  release_preflight.py  validate_license.py  validate_versions.py
search.index/: 0043f70760ce.js  0098ab9403e9.js  00b59330c728.js  02741d344e17.js  030cda0794b7.js  05e7799dda20.js  061fc8659cc6.js  073c9de9520d.js  081e3767f33b.js  0a97181cf3cb.js  0aa6f659e460.js  0b5be30607b0.js  0c493a2ecf86.js  0cfeb36050fa.js  0de159127bf2.js  0df68bb2a399.js  0e53f9e37fb7.js  0e88a295ad0d.js  0efe1ece10b1.js  0f32907394b7.js  0f8ed298344a.js  0fdbdf26b14c.js  121337b373d6.js  13de72c1ff9c.js  149f339bd3c0.js  1523b0df0edc.js  15243f45b669.js  15856faa5881.js  159cd2edb27b.js  15b7a79c4e7c.js  15e8f163f455.js  15f383b265bc.js  17fa0a0eb93a.js  18b79570120d.js  18bb8422d9b3.js  1918c554462a.js  19f0ee1f2d27.js  1b65d0cfd28a.js  1b741ca6fe8e.js  1b952539078d.js  (+169 more)
src/: lib.rs
tests/: README.md  pandas_ta_compat.py  pandas_ta_kw_compat.py  precision_validator.py  run_precision_tests.py
(+804 files in other folders)
