[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "haze-library"
version = "0.1.2"
description = "High-performance quantitative trading indicators library with Rust backend"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["trading", "indicators", "quantitative", "technical-analysis", "rust"]
authors = [
    {name = "Haze Team", email = "team@haze-library.com"},
]
maintainers = [
    {name = "Haze Team", email = "team@haze-library.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ccxt>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pandas-ta>=0.4.71b0; python_version >= '3.12' and python_version < '3.13'",
    "TA-Lib>=0.4.28",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/kwannz/haze"
Documentation = "https://github.com/kwannz/haze"
Repository = "https://github.com/kwannz/haze"
Issues = "https://github.com/kwannz/haze/issues"
Changelog = "https://github.com/kwannz/haze/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "src"
features = ["python"]
manifest-path = "rust/Cargo.toml"
module-name = "haze_library.haze_library"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["haze_library"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["ccxt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["vendor", "build", "dist", ".venv"]
