[package]
name = "haze-library"
version = "0.1.0"
edition = "2021"
description = "Rust backend for Haze quantitative trading indicators library"
license = "CC-BY-NC-4.0"
homepage = "https://github.com/kwannz/haze"
repository = "https://github.com/kwannz/haze"

[lib]
name = "haze_library"
crate-type = ["cdylib"]

[dependencies]
# PyO3 0.27+ 支持 Python 3.8-3.14
pyo3 = { version = "0.27", optional = true, features = ["extension-module"] }
numpy = { version = "0.27", optional = true }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# ML 框架 (linfa)
linfa = "0.7"
linfa-svm = "0.7"
linfa-linear = "0.7"
linfa-preprocessing = "0.7"

# 数值计算
ndarray-rand = "0.14"

# 模型序列化
bincode = "1.3"
serde_json = "1.0"

[dependencies.ndarray]
version = "0.15"
features = ["rayon"]

[features]
default = []
python = ["pyo3", "numpy"]
simd = []  # 可选 SIMD 优化

# ============================================================================
# 构建优化配置
# ============================================================================

[profile.release]
opt-level = 3           # 最高优化级别
lto = "fat"             # 全程序链接时优化
codegen-units = 1       # 单代码生成单元，更好优化
panic = "abort"         # 减少二进制大小
strip = true            # 剥离符号

[profile.release-with-debug]
inherits = "release"
debug = true            # 保留调试信息用于 profiling
strip = false

[profile.bench]
inherits = "release"
debug = true            # 基准测试保留调试信息
