[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "haze-library"
version = "0.1.0"
description = "High-performance quantitative trading indicators library powered by Rust"
readme = "../README.md"
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.9"
keywords = ["trading", "indicators", "technical-analysis", "quantitative", "rust", "finance"]
authors = [
    { name = "kwannz" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
dev = ["pytest", "pandas", "maturin"]

[project.urls]
Homepage = "https://github.com/kwannz/haze"
Repository = "https://github.com/kwannz/haze"
Issues = "https://github.com/kwannz/haze/issues"

[tool.maturin]
features = ["python"]
module-name = "haze_library.haze_library"
python-source = "../src"
