[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[project]
name = "haze-library"
version = "1.0.6"
description = "High-performance quantitative trading indicators library powered by Rust"
readme = "../README.md"
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.14"
keywords = ["trading", "indicators", "technical-analysis", "quantitative", "rust", "finance"]
authors = [
    { name = "kwannz" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.4.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.3.3"]
dev = ["pytest>=9.0.2", "pandas>=2.3.3", "maturin>=1.10.2,<2.0"]

[project.urls]
Homepage = "https://github.com/kwannz/haze"
Repository = "https://github.com/kwannz/haze"
Issues = "https://github.com/kwannz/haze/issues"

[tool.maturin]
features = ["python"]
module-name = "haze_library.haze_library"
python-source = "../src"
